--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
     <h1 class="main-title">
       <span class="light">Reliable, efficient delivery</span><br>
       <span class="bold">Powered by Technology</span>
@@ -19,29 +19,29 @@
     <p class="text">Our Artificial Intelligence powered tools use millions of project data points to ensure that your
       project is successful</p>
 
-    <div class="cards">
-      <div class="item one">
-        <h4>Supervisor</h4>
+    <section class="cards">
+      <article class="item one">
+        <h2>Supervisor</h2>
         <p>Monitors activity to identify project roadblocks</p>
         <img src="images/icon-supervisor.svg" alt="">
-      </div>
-      <div class="item two">
-        <h4>Team Builder</h4>
+      </article>
+      <article class="item two">
+        <h2>Team Builder</h2>
         <p>Scans our talent network to create the optimal team for your project</p>
         <img src="images/icon-team-builder.svg" alt="">
-      </div>
-      <div class="item three">
-        <h4>Karma</h4>
+      </article>
+      <article class="item three">
+        <h2>Karma</h2>
         <p>Regularly evaluates our talent to ensure quality</p>
         <img src="images/icon-karma.svg" alt="">
-      </div>
-      <div class="item four">
-        <h4>Calculator</h4>
+      </article>
+      <article class="item four">
+        <h2>Calculator</h2>
         <p>Uses data from past projects to provide better delivery estimates</p>
         <img src="images/icon-calculator.svg" alt="">
-      </div>
-    </div>
-  </div>
+      </article>
+    </section>
+  </main>
 </body>
 
 </html>
